add nullable description to banner CRUD and update Swagger docs
